3 Form :: added DonationController and fixed the footer

--- a/src/main/resources/templates/form-confirmation.html
+++ b/src/main/resources/templates/form-confirmation.html
@@ -25,13 +25,12 @@
 
       <div class="slogan container container--90">
           <h2>
-            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
+            Dziękujemy za przesłanie formularza. <br> Na maila prześlemy wszelkie
             informacje o odbiorze.
           </h2>
       </div>
     </header>
-    <footer>
-      <span th:include="fragments/footer :: footer"></span>
+    <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
 </html>
