--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -74,18 +74,14 @@
       <div class="form--steps-container">
         <div class="form--steps-counter">Krok <span>1</span>/4</div>
 
-        <form action="form-confirmation.html" method="post">
+        <form th:action="@{/form}" method="post">
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
             <h3>Zaznacz co chcesz oddać:</h3>
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input
-                  type="checkbox"
-                  name="categories"
-                  value="clothes-to-use"
-                />
+<!--                <input th:field="*{category}" type="checkbox" name="categories" value="clothes-to-use"/>-->
                 <span class="checkbox"></span>
                 <span class="description"
                   >ubrania, które nadają się do ponownego użycia</span
@@ -95,11 +91,7 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input
-                  type="checkbox"
-                  name="categories"
-                  value="clothes-useless"
-                />
+<!--                <input th:field="*{category}" type="checkbox" name="categories" value="clothes-useless"/>-->
                 <span class="checkbox"></span>
                 <span class="description">ubrania, do wyrzucenia</span>
               </label>
@@ -107,7 +99,7 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="checkbox" name="categories" value="toys" />
+<!--                <input th:field="*{category}" type="checkbox" name="categories" value="toys" />-->
                 <span class="checkbox"></span>
                 <span class="description">zabawki</span>
               </label>
@@ -115,7 +107,7 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="checkbox" name="categories" value="books" />
+<!--                <input th:field="*{category}" type="checkbox" name="categories" value="books" />-->
                 <span class="checkbox"></span>
                 <span class="description">książki</span>
               </label>
@@ -123,7 +115,7 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="checkbox" name="categories" value="other" />
+<!--                <input th:field="*{category}" type="checkbox" name="categories" value="other" />-->
                 <span class="checkbox"></span>
                 <span class="description">inne</span>
               </label>
@@ -141,7 +133,7 @@
             <div class="form-group form-group--inline">
               <label>
                 Liczba 60l worków:
-                <input type="number" name="bags" step="1" min="1" />
+                <input th:field="*{donation.quantity}" type="number" name="bags" step="1" min="1" />
               </label>
             </div>
 
@@ -159,7 +151,7 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="radio" name="organization" value="old" />
+                <input th:field="*{donation.institution}" type="radio" name="organization" th:value="2" />
                 <span class="checkbox radio"></span>
                 <span class="description">
                   <div class="title">Fundacja “Bez domu”</div>
@@ -173,13 +165,39 @@
 
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="radio" name="organization" value="old" />
+                <input th:field="*{donation.institution}" type="radio" name="organization" th:value="4" />
                 <span class="checkbox radio"></span>
                 <span class="description">
                   <div class="title">Fundacja “Dla dzieci"</div>
                   <div class="subtitle">
                     Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji
                     życiowej.
+                  </div>
+                </span>
+              </label>
+            </div>
+
+            <div class="form-group form-group--checkbox">
+              <label>
+                <input th:field="*{donation.institution}" type="radio" name="organization" th:value="1" />
+                <span class="checkbox radio"></span>
+                <span class="description">
+                  <div class="title">Fundacja "Dbam o Zdrowie"</div>
+                  <div class="subtitle">
+                    Cel i misja: Pomoc dzieciom z ubogich rodzin.
+                  </div>
+                </span>
+              </label>
+            </div>
+
+            <div class="form-group form-group--checkbox">
+              <label>
+                <input th:field="*{donation.institution}" type="radio" name="organization" th:value="3" />
+                <span class="checkbox radio"></span>
+                <span class="description">
+                  <div class="title">Fundacja "A kogo"</div>
+                  <div class="subtitle">
+                    Cel i misja: Pomoc w wybudzaniu dzieci ze śpiączki.
                   </div>
                 </span>
               </label>
@@ -199,22 +217,22 @@
               <div class="form-section--column">
                 <h4>Adres odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Ulica <input type="text" name="address" /> </label>
+                  <label> Ulica <input th:field="*{donation.street}" type="text" name="address" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Miasto <input type="text" name="city" /> </label>
+                  <label> Miasto <input th:field="*{donation.city}" type="text" name="city" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Kod pocztowy <input type="text" name="postcode" />
+                    Kod pocztowy <input th:field="*{donation.zipCode}" type="tel" name="postcode" />
                   </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Numer telefonu <input type="phone" name="phone" />
+                    Numer telefonu <input th:field="*{donation.phone}" type="tel" name="phone" />
                   </label>
                 </div>
               </div>
@@ -222,17 +240,17 @@
               <div class="form-section--column">
                 <h4>Termin odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Data <input type="date" name="data" /> </label>
+                  <label> Data <input th:field="*{donation.pickUpDate}" type="date" name="data" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Godzina <input type="time" name="time" /> </label>
+                  <label> Godzina <input th:field="*{donation.pickUpTime}" type="time" name="time" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
                     Uwagi dla kuriera
-                    <textarea name="more_info" rows="5"></textarea>
+                    <textarea th:field="*{donation.pickUpComment}" name="more_info" rows="5"></textarea>
                   </label>
                 </div>
               </div>
@@ -297,8 +315,7 @@
         </form>
       </div>
     </section>
-    <footer>
-      <span th:include="fragments/footer :: footer"></span>
+    <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
 </html>
