--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,8 +37,7 @@
         </div>
       </form>
     </section>
-    <footer>
-      <span th:include="fragments/footer :: footer"></span>
+    <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
 </html>
