--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -113,7 +113,7 @@
 
           <!-- STEP 4 -->
           <div data-step="3">
-            <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+            <h3>Wybierz organizację, której chcesz pomóc:</h3>
 
             <div th:each="institution: ${institutions}" class="form-group form-group--checkbox">
               <label>
@@ -121,7 +121,7 @@
                        th:value="${institution.id}"/>
                 <span class="checkbox radio"></span>
                 <span class="description">
-                  <div th:text="${institution.name}" class="title"></div>
+                  <div name="institution" th:text="${'Fundacja '+institution.name}" class="title"></div>
                   <div th:text="${institution.description}" class="subtitle">
                   </div>
                 </span>
@@ -130,7 +130,7 @@
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
+              <button type="button" class="btn next-step" onclick="return updateConfirmation()">Dalej</button>
             </div>
           </div>
 
@@ -142,23 +142,22 @@
               <div class="form-section--column">
                 <h4>Adres odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Ulica <input th:field="*{donation.street}" type="text" name="address" /> </label>
+                  <label> Ulica <input id="street" th:field="*{donation.street}" type="text" name="address" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Miasto <input th:field="*{donation.city}" type="text" name="city" /> </label>
+                  <label> Miasto <input id="city" th:field="*{donation.city}" type="text" name="city" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Kod pocztowy <input th:field="*{donation.zipCode}" placeholder="00-000" type="tel" name="postcode"/>
+                    Kod pocztowy <input id="zip-code" th:field="*{donation.zipCode}" placeholder="00-000" type="tel" name="postcode"/>
                   </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Numer telefonu <input th:field="*{donation.phone}" placeholder="000-000-000" type="tel"
-                                          name="phone"/>
+                    Numer telefonu <input id="telephone" th:field="*{donation.phone}" placeholder="000-000-000" type="tel" name="phone"/>
                   </label>
                 </div>
               </div>
@@ -166,24 +165,24 @@
               <div class="form-section--column">
                 <h4>Termin odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Data <input th:field="*{donation.pickUpDate}" type="date" name="data" /> </label>
+                  <label> Data <input id="pick-up-date" th:field="*{donation.pickUpDate}" type="date" name="data" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Godzina <input th:field="*{donation.pickUpTime}" type="time" name="time" /> </label>
+                  <label> Godzina <input id="pick-up-time" th:field="*{donation.pickUpTime}" type="time" name="time" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
                     Uwagi dla kuriera
-                    <textarea th:field="*{donation.pickUpComment}" name="more_info" rows="5"></textarea>
+                    <textarea id="pick-up-comment" th:field="*{donation.pickUpComment}" name="more_info" rows="5"></textarea>
                   </label>
                 </div>
               </div>
             </div>
             <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
+              <button type="button" class="btn next-step" onclick="return updateConfirmation()">Dalej</button>
             </div>
           </div>
 
@@ -204,9 +203,7 @@
 
                   <li>
                     <span class="icon icon-hand"></span>
-                    <span class="summary--text"
-                      >Dla fundacji "Mam marzenie" w Warszawie</span
-                    >
+                    <span id="organization" class="summary--text">Dla fundacji "Mam marzenie" w Warszawie</span>
                   </li>
                 </ul>
               </div>
@@ -215,19 +212,19 @@
                 <div class="form-section--column">
                   <h4>Adres odbioru:</h4>
                   <ul>
-                    <li>Prosta 51</li>
-                    <li>Warszawa</li>
-                    <li>99-098</li>
-                    <li>123 456 789</li>
+                    <li id="road">Prosta 51</li>
+                    <li id="place">Warszawa</li>
+                    <li id="code">99-098</li>
+                    <li id="phone">123 456 789</li>
                   </ul>
                 </div>
 
                 <div class="form-section--column">
                   <h4>Termin odbioru:</h4>
                   <ul>
-                    <li>13/12/2018</li>
-                    <li>15:40</li>
-                    <li>Brak uwag</li>
+                    <li id="date">13/12/2018</li>
+                    <li id="time">15:40</li>
+                    <li id="comment">Brak uwag</li>
                   </ul>
                 </div>
               </div>
@@ -244,4 +241,25 @@
     <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
+<script type="text/javascript">
+  function updateConfirmation(){
+    const institution = document.querySelector('input[name="institution"]:checked').value;
+    const preparedInst = "Dla fundacji "+institution;
+    document.getElementById("organization").innerHTML = preparedInst;
+        const street = document.querySelector('#street').value;
+    document.getElementById("road").innerHTML = street;
+    const city = document.querySelector('#city').value;
+    document.getElementById("place").innerHTML = city;
+    const zipCode = document.querySelector('#zip-code').value;
+    document.getElementById("code").innerHTML = zipCode;
+    const phone = document.querySelector('#telephone').value;
+    document.getElementById("phone").innerHTML = phone;
+    const pickUpDate = document.querySelector('#pick-up-date').value;
+    document.getElementById("date").innerHTML = pickUpDate;
+    const pickUpTime = document.querySelector('#pick-up-time').value;
+    document.getElementById("time").innerHTML = pickUpTime;
+    const pickUpComment = document.querySelector('#pick-up-comment').value;
+    document.getElementById("comment").innerHTML = pickUpComment;
+  }
+</script>
 </html>
