--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,40 +84,17 @@
     <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
       Możesz sprawdzić czym się zajmują.</p>
     <ul class="help--slides-items">
-      <li th:each="institutions: ${institutions}">
-        <div th:if="${institutionsStat.index %2 == 1}" class="col">
-          <div th:text="${institutions.name}" class="title"></div>
-          <div th:text="${institutions.description}" class="subtitle"></div>
+      <li th:each="institution : ${institutions}">
+        <div class="col">
+          <div th:text="${institution.get(0).name}" class="title"></div>
+          <div th:text="${institution.get(0).description}" class="subtitle"></div>
         </div>
-        <div th:if="${institutionsStat.index %2 == 0}" class="col">
-          <div th:text="${institutions.name}" class="title"></div>
-          <div th:text="${institutions.description}" class="subtitle"></div>
+        <div class="col">
+          <div th:text="${institution.get(1).name}" class="title"></div>
+          <div th:text="${institution.get(1).description}" class="subtitle"></div>
         </div>
       </li>
     </ul>
-
-    <!--    <ul class="help&#45;&#45;slides-items">-->
-    <!--      <li>-->
-    <!--        <div class="col">-->
-    <!--          <div class="title">Fundacja "Dbam o Zdrowie"</div>-->
-    <!--          <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>-->
-    <!--        </div>-->
-    <!--        <div class="col">-->
-    <!--          <div class="title">Fundacja "A kogo"</div>-->
-    <!--          <div class="subtitle">Cel i misja: Pomoc wybudzaniu dzieci ze śpiączki.</div>-->
-    <!--        </div>-->
-    <!--      </li>-->
-    <!--      <li>-->
-    <!--        <div class="col">-->
-    <!--          <div class="title">Fundacja "Dla dzieci"</div>-->
-    <!--          <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>-->
-    <!--        </div>-->
-    <!--        <div class="col">-->
-    <!--          <div class="title">Fundacja "Bez domu"</div>-->
-    <!--          <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>-->
-    <!--        </div>-->
-    <!--      </li>-->
-    <!--    </ul>-->
   </div>
 </section>
 <footer th:include="fragments/footer :: footer">
