4 Registration :: register and login page mapped

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -272,6 +272,8 @@
       institutionName = " \"A kogo\" ";
     } else if(institution==4){
       institutionName = " \"Dla dzieci\" ";
+    } else if(institution==5){
+      institutionName = " \"Cztery łapy\" ";
     }
     const preparedInst = "Dla fundacji "+institutionName;
     document.getElementById("organization").innerHTML = preparedInst;
