--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link th:href="@{/css/style.css}" rel='stylesheet' type='text/css' />
   </head>
   <body>
     <header>
       <nav class="container container--70">
         <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
+          <li><a th:href="@{/login}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a th:href="@{/register}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
         </ul>
         <span th:include="fragments/header :: header"></span>
       </nav>
@@ -30,8 +30,8 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
-          <button class="btn" type="submit">Zaloguj się</button> 
+          <button class="btn" type="submit">Zaloguj się</button>
+          <a href="#" class="btn btn--without-border">Załóż konto</a>
         </div>
       </form>
     </section>
