--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link th:href="@{/css/style.css}" rel='stylesheet' type='text/css' />
   </head>
   <body>
     <header>
       <nav class="container container--70">
         <ul class="nav--actions">
-          <li><a href="#">Zaloguj</a></li>
-          <li class="highlighted"><a href="#">Załóż konto</a></li>
+          <li><a th:href="@{/login}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+          <li><a th:href="@{/register}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
         </ul>
         <span th:include="fragments/header :: header"></span>
       </nav>
@@ -22,22 +22,72 @@
       <h2>Załóż konto</h2>
       <form>
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+          <input type="text" name="username" placeholder="Nazwa użytkownika" />
         </div>
         <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
+          <input type="email" id="email" name="email" placeholder="Email" /><span id="validEmail" style="color: red; text-align: center"></span>
         </div>
         <div class="form-group">
-          <input type="password" name="password2" placeholder="Powtórz hasło" />
+          <input type="text" id="firstName" name="firstName" placeholder="Imię" /><span id="validFirstName" style="color: red; text-align: center"></span>
+        </div>
+        <div class="form-group">
+          <input type="text" id="lastName" name="lastName" placeholder="Nazwisko" /><span id="validLastName" style="color: red; text-align: center"></span>
+        </div>
+        <div class="form-group">
+          <input type="password" id="password" name="password" placeholder="Hasło" />
+        </div>
+        <div class="form-group">
+          <input type="password" id="password2" name="password2" placeholder="Powtórz hasło" />
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
-          <button class="btn" type="submit">Załóż konto</button>
+          <button class="btn" type="submit" onclick="return checkPasswordAndName(); validate()">Załóż konto</button>
+<!--          <a href="login.html" class="btn btn&#45;&#45;without-border">Zaloguj się</a>-->
         </div>
       </form>
     </section>
     <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
+<script>
+  function checkPasswordAndName() {
+    var pass1 = document.getElementById("password").value;
+    var pass2 = document.getElementById("password2").value;
+    var admin = document.getElementById("username").value;
+    if(pass1 != pass2 )
+    {
+      alert("Hasła różnią się od siebie")
+      returnToPreviousPage();
+      return false;
+    }
+    if(admin.includes('admin')){
+      alert("Konto ze słowem admin jest zarezerwowane")
+      returnToPreviousPage();
+      return false;
+    }
+  }
+
+  function validate(){
+    var email = document.getElementById("email").value;
+    var firstName = document.getElementById("firstName").value;
+    var lastName = document.getElementById("lastName").value;
+    const regexEmail = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    const regexName = /^[a-zA-Z ]+$/;
+    if(regexEmail.test(email) == false){
+      document.getElementById("validEmail").innerHTML = "Niepoprawny adres e-mail";
+      returnToPreviousPage();
+    }
+    if(regexName.test(firstName) == false){
+      document.getElementById("validFirstName").innerHTML = "Imię składa się wyłącznie z liter";
+      returnToPreviousPage();
+    }
+    if(regexName.test(lastName) == false){
+      document.getElementById("validLastName").innerHTML = "Nazwisko składa się wyłącznie z liter";
+      returnToPreviousPage();
+    }
+  }
+  function returnToPreviousPage() {
+    window.history.forward(-1);
+  }
+</script>
 </html>
