--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,28 +20,38 @@
 
     <section class="login-page">
       <h2>Załóż konto</h2>
-      <form>
+      <form th:object="${user}" method="post" th:action="@{/register}">
         <div class="form-group">
-          <input type="text" name="username" placeholder="Nazwa użytkownika" />
+          <input th:field="*{username}" type="text" name="username" placeholder="Nazwa użytkownika" id="username"/>
+          <span id='adminError'></span>
         </div>
         <div class="form-group">
-          <input type="email" id="email" name="email" placeholder="Email" /><span id="validEmail" style="color: red; text-align: center"></span>
+          <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email" />
+          <span id="validEmail" style="color: red; text-align: center"></span>
         </div>
         <div class="form-group">
-          <input type="text" id="firstName" name="firstName" placeholder="Imię" /><span id="validFirstName" style="color: red; text-align: center"></span>
+          <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Imię" />
+          <span id="validFirstName" style="color: red; text-align: center"></span>
         </div>
         <div class="form-group">
-          <input type="text" id="lastName" name="lastName" placeholder="Nazwisko" /><span id="validLastName" style="color: red; text-align: center"></span>
+          <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Nazwisko" />
+          <span id="validLastName" style="color: red; text-align: center"></span>
         </div>
         <div class="form-group">
-          <input type="password" id="password" name="password" placeholder="Hasło" />
+          <input th:field="*{password}" type="password" id="password" name="password" placeholder="Hasło" />
         </div>
         <div class="form-group">
-          <input type="password" id="password2" name="password2" placeholder="Powtórz hasło" />
+          <input type="password" id="password2" name="password2" placeholder="Powtórz hasło"/>
+          <span id='passwordError'></span>
+          <input type="hidden" th:value="${localDateTime}" id="created" name="created"/>
+          <input type="hidden" th:value="${localDateTime}" id="last_update" name="last_update"/>
+          <input type="hidden" th:value="true" id="active" name="active"/>
+          <input type="hidden" th:value="1" id="usersRoles" name="usersRoles"/>
         </div>
 
         <div class="form-group form-group--buttons">
           <button class="btn" type="submit" onclick="return checkPasswordAndName(); validate()">Załóż konto</button>
+<!--          for me button below shouldn't be here-->
 <!--          <a href="login.html" class="btn btn&#45;&#45;without-border">Zaloguj się</a>-->
         </div>
       </form>
@@ -49,7 +59,21 @@
     <footer th:include="fragments/footer :: footer">
     </footer>
   </body>
-<script>
+<script type="text/javascript">
+  $('#username').on('keyup', function() {
+    if($('#username').val().includes('admin')) {
+      $('#adminError').html('Konto ze słowem admin jest zarezerwowane').css('color', 'red');
+    } else
+      $('#adminError').html('Nazwa użytkownika dozwolona').css('color', 'green');
+  })
+
+  $('#password, #password2').on('keyup', function () {
+    if ($('#password').val() == $('#password2').val()) {
+      $('#passwordError').html('Hasło potwierdzone').css('color', 'green');
+    } else
+      $('#passwordError').html('Hasła różnią się od siebie, proszę popraw').css('color', 'red');
+  });
+
   function checkPasswordAndName() {
     var pass1 = document.getElementById("password").value;
     var pass2 = document.getElementById("password2").value;
