4 Registration :: partially done, user can create an account

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,7 +65,7 @@
       <p>kurier przyjedzie w dogodnym terminie</p>
     </div>
   </div>
-  <a href="#" class="btn btn--large">Załóż konto</a>
+  <a th:href="@{/register}" class="btn btn--large">Załóż konto</a>
 </section>
 <section class="about-us">
   <div class="about-us--text">
