--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
 
         <div class="form-group form-group--buttons">
           <button class="btn" type="submit">Zaloguj się</button>
-          <a href="#" class="btn btn--without-border">Załóż konto</a>
+          <a th:href="@{/register}" class="btn btn--without-border">Załóż konto</a>
         </div>
       </form>
     </section>
