--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src ="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <title>Document</title>
     <link th:href="@{/css/style.css}" rel='stylesheet' type='text/css' />
   </head>
@@ -43,16 +44,10 @@
         <div class="form-group">
           <input type="password" id="password2" name="password2" placeholder="Powtórz hasło"/>
           <span id='passwordError'></span>
-          <input type="hidden" th:value="${localDateTime}" id="created" name="created"/>
-          <input type="hidden" th:value="${localDateTime}" id="last_update" name="last_update"/>
-          <input type="hidden" th:value="true" id="active" name="active"/>
-          <input type="hidden" th:value="1" id="usersRoles" name="usersRoles"/>
         </div>
 
         <div class="form-group form-group--buttons">
           <button class="btn" type="submit" onclick="return checkPasswordAndName(); validate()">Załóż konto</button>
-<!--          for me button below shouldn't be here-->
-<!--          <a href="login.html" class="btn btn&#45;&#45;without-border">Zaloguj się</a>-->
         </div>
       </form>
     </section>
