--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -12,7 +12,7 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li class="logged-user">
-            Witaj Agata
+            Witaj <span th:text="${userFirstName}"></span>
             <ul class="dropdown">
               <li><a href="#">Profil</a></li>
               <li><a href="#">Moje zbiórki</a></li>
