--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,10 +4,10 @@
 <header th:fragment="header">
     <ul>
         <li><a th:href="@{/form}" class="btn btn--without-border active">Start</a></li>
-        <li><a href="#" class="btn btn--without-border">O co chodzi?</a></li>
-        <li><a href="#" class="btn btn--without-border">O nas</a></li>
-        <li><a href="#" class="btn btn--without-border">Fundacje i organizacje</a></li>
-        <li><a href="#" class="btn btn--without-border">Kontakt</a></li>
+        <li><a th:href="@{/}" class="btn btn--without-border">O co chodzi?</a></li>
+        <li><a th:href="@{/}" class="btn btn--without-border">O nas</a></li>
+        <li><a th:href="@{/}" class="btn btn--without-border">Fundacje i organizacje</a></li>
+        <li><a th:href="@{/}" class="btn btn--without-border">Kontakt</a></li>
     </ul>
 </header>
 </body>
