--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -15,6 +15,7 @@
             Witaj <span th:text="${userFirstName}"></span>
             <ul class="dropdown">
               <li><a th:href="@{/myprofile}">Profil</a></li>
+              <li><a th:href="@{/form}">Przekaż darowiznę</a></li>
               <li><a href="#">Moje zbiórki</a></li>
               <li><a th:href="@{/logout}">Wyloguj</a></li>
             </ul>
@@ -24,7 +25,7 @@
       </nav>
 
       <div class="slogan container container--90">
-        <div class="slogan--item">
+        <div class="slogan--item" id="donateThings">
           <h1>
             Oddaj rzeczy, których już nie chcesz<br />
             <span class="uppercase">potrzebującym</span>
