--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,11 +3,11 @@
 <body>
 <header th:fragment="header">
     <ul>
-        <li><a th:href="@{/form}" class="btn btn--without-border active">Start</a></li>
-        <li><a th:href="@{/}" class="btn btn--without-border">O co chodzi?</a></li>
-        <li><a th:href="@{/}" class="btn btn--without-border">O nas</a></li>
-        <li><a th:href="@{/}" class="btn btn--without-border">Fundacje i organizacje</a></li>
-        <li><a th:href="@{/}" class="btn btn--without-border">Kontakt</a></li>
+        <li><a th:href="@{/}" class="btn btn--without-border active">Start</a></li>
+        <li><a th:href="@{/#whatIsItAbout}" class="btn btn--without-border">O co chodzi?</a></li>
+        <li><a th:href="@{/#aboutUs}" class="btn btn--without-border">O nas</a></li>
+        <li><a th:href="@{/#institutions}" class="btn btn--without-border">Fundacje i organizacje</a></li>
+        <li><a th:href="@{/#contact}" class="btn btn--without-border">Kontakt</a></li>
     </ul>
 </header>
 </body>
