--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
   </div>
 </header>
 <section class="stats">
-  <div class="container container--85">
+  <div class="container container--85" id="whatIsItAbout">
     <div class="stats--item">
       <em th:text="${quantityOfDonations}"></em>
       <h3>Oddanych worków</h3>
@@ -67,7 +67,7 @@
   </div>
   <a th:href="@{/register}" class="btn btn--large">Załóż konto</a>
 </section>
-<section class="about-us">
+<section class="about-us" id="aboutUs">
   <div class="about-us--text">
     <h2>O nas</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero
@@ -77,7 +77,7 @@
   <div class="about-us--image"><img th:src="@{/images/about-us.jpg}"  alt="People in circle"/>
   </div>
 </section>
-<section class="help">
+<section class="help" id="institutions">
   <h2>Komu pomagamy?</h2>
   <!-- SLIDE 1 -->
   <div class="help--slides active" data-id="1">
