--- a/src/main/resources/templates/my-profile.html
+++ b/src/main/resources/templates/my-profile.html
@@ -16,6 +16,7 @@
                 Witaj <span th:text="${userFirstName}"></span>
                 <ul class="dropdown">
                     <li><a th:href="@{/myprofile}">Profil</a></li>
+                    <li><a th:href="@{/form}">Przekaż darowiznę</a></li>
                     <li><a href="#">Moje zbiórki</a></li>
                     <li><a th:href="@{/logout}">Wyloguj</a></li>
                 </ul>
