--- a/src/main/resources/templates/admin/my-profile.html
+++ b/src/main/resources/templates/admin/my-profile.html
@@ -15,8 +15,10 @@
             <li class="logged-user">
                 Witaj <span th:text="${userFirstName}"></span>
                 <ul class="dropdown">
-                    <li><a th:href="@{/myprofile}">Profil</a></li>
-                    <li><a href="#">Moje zbiórki</a></li>
+                    <li><a th:href="@{/admin/myprofile}">Profil</a></li>
+                    <li><a href="#">Zarządzaj fundacjami</a></li>
+                    <li><a href="#">Zarządzaj użytkownikami</a></li>
+                    <li><a href="#">Zarządzaj adminami</a></li>
                     <li><a th:href="@{/logout}">Wyloguj</a></li>
                 </ul>
             </li>
