7 Institutions management :: added institutions view

--- a/src/main/resources/templates/admin/fragments/loggedOrNotLogged.html
+++ b/src/main/resources/templates/admin/fragments/loggedOrNotLogged.html
@@ -15,7 +15,7 @@
             Witaj <span th:text="${userFirstName}"></span>
                 <ul class="dropdown">
                     <li><a th:href="@{/admin/myprofile}">Profil</a></li>
-                    <li><a href="#">Zarządzaj fundacjami</a></li>
+                    <li><a th:href="@{/admin/institutions}">Zarządzaj fundacjami</a></li>
                     <li><a href="#">Zarządzaj użytkownikami</a></li>
                     <li><a href="#">Zarządzaj adminami</a></li>
                     <li><a th:href="@{/logout}">Wyloguj</a></li>
