--- a/src/main/resources/templates/no-privileges.html
+++ b/src/main/resources/templates/no-privileges.html
@@ -11,17 +11,7 @@
 <body>
 <header>
     <nav class="container container--70">
-        <ul class="nav--actions">
-            <li class="logged-user">
-                Witaj <span th:text="${userFirstName}"></span>
-                <ul class="dropdown">
-                    <li><a th:href="@{/myprofile}">Profil</a></li>
-                    <li><a th:href="@{/form}">Przekaż darowiznę</a></li>
-                    <li><a href="#">Moje zbiórki</a></li>
-                    <li><a th:href="@{/logout}">Wyloguj</a></li>
-                </ul>
-            </li>
-        </ul>
+        <span th:include="fragments/loggedOrNotLogged :: loggedOrNotLogged"></span>
         <span th:include="fragments/header :: header"></span>
     </nav>
 </header>
