--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1882,8 +1882,8 @@ footer .bottom-line--icons a img {
   padding: 0.5em 0.6em;
 }
 
-#goToTop:hover {
-  background-color: #f9c910; /* Add a dark-grey background on hover */
+#goToTop:hover, #edit:hover, #remove:hover {
+  background-color: #f9c910; /* Add a yellow background on hover */
   font-weight: bold;
 }
 
