--- a/src/main/resources/templates/admin/edit-admin.html
+++ b/src/main/resources/templates/admin/edit-admin.html
@@ -17,40 +17,42 @@
 </header>
 
 <section class="login-page">
-        <h2 style="font-weight:normal">Witaj <span th:text="${username}"></span>, poniżej możesz sprawdzić oraz zmienić swoje dane.</h2>
-        <form th:object="${user}" method="post" th:action="@{/myprofile}">
-            <div class="form-group">
-                <input th:field="*{username}" type="text" name="username" placeholder="Nazwa użytkownika" id="username"/>
-                <span id='adminError'></span>
-            </div>
-            <div class="form-group">
-                <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email" />
-            </div>
-            <div class="form-group">
-                <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Imię" />
-                <span id='firstNameError'></span>
-            </div>
-            <div class="form-group">
-                <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Nazwisko" />
-                <span id='lastNameError'></span>
-            </div>
-            <div class="form-group">
-                <input th:field="*{password}" type="password" id="password" name="password" placeholder="Hasło" />
-            </div>
-            <div class="form-group">
-                <input type="password" id="password2" name="password2" placeholder="Powtórz hasło"/>
-                <span id='passwordError'></span>
-                <input type="hidden" th:field="*{created}"/>
-                <input type="hidden" th:field="${user.id}"/>
-            </div>
+    <h2 style="font-weight:normal">Formularz edycji istniejącego administratora.</h2>
+    <div class="help--slides active" data-id="1">
+        <p>Poniżej znajdują się dane administratora: <span th:text="${admin.username}" style="font-weight: bold"></span>.</p>
+    </div>
+    <form th:object="${admin}" method="post" th:action="@{/admin/adminslist/edit}">
+        <div class="form-group">
+            <input th:field="*{username}" type="text" name="username" placeholder="Nazwa użytkownika" id="username"/>
+            <span id='adminError'></span>
+        </div>
+        <div class="form-group">
+            <input th:field="*{email}" type="email" id="email" name="email" placeholder="Email" />
+        </div>
+        <div class="form-group">
+            <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Imię" />
+            <span id='firstNameError'></span>
+        </div>
+        <div class="form-group">
+            <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Nazwisko" />
+            <span id='lastNameError'></span>
+        </div>
+        <div class="form-group">
+            <input th:field="*{password}" type="password" id="password" name="password" placeholder="Hasło" />
+        </div>
+        <div class="form-group">
+            <input type="password" id="password2" name="password2" placeholder="Powtórz hasło"/>
+            <span id='passwordError'></span>
+            <input th:field="${admin.id}" type="hidden">
+        </div>
 
-            <div class="form-group form-group--buttons">
-                <button class="btn" type="submit" onclick="return validate()">Aktualizuj dane</button>
-            </div>
-        </form>
-    </section>
-    <footer th:include="fragments/footer :: footer">
-    </footer>
+        <div class="form-group form-group--buttons">
+            <button class="btn" type="submit" onclick="return validate()">Edytuj administratora</button>
+        </div>
+    </form>
+</section>
+<footer th:include="fragments/footer :: footer">
+</footer>
 </body>
 <script type="text/javascript">
     $('#password, #password2').on('keyup', function () {
